welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: reassignment to val
				x= true;
                                 ^